--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 modGroup=com.buuz135
-modVersion=1.0-SNAPSHOT
+modVersion=1.0.0
 modBaseName=project42
 forgeVersion=1.12.2-14.23.5.2772
 mcpVersion=stable_39
