--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,18 @@ buildscript {
         }
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'com.selesse:gradle-git-changelog:0.2.+'
+        classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.1.0"
     }
 }
-
-apply plugin: "net.minecraftforge.gradle.forge"
+plugins {
+    id "com.github.hierynomus.license" version "0.14.0"
+    id "com.matthewprenger.cursegradle" version "1.1.0"
+}
+apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'com.selesse.git.changelog'
+apply plugin: 'java'
 
 version = modVersion
 group = modGroup
@@ -53,5 +60,75 @@ processResources {
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude "mcmod.info"
+    }
+}
+
+task apiJar(type: Jar, dependsOn: 'classes') {
+    classifier = 'api'
+    from(sourceSets.main.output) {
+        include 'com/buuz135/project42/api/**'
+    }
+}
+
+task devJar(type: Jar, dependsOn: 'classes') {
+    from(sourceSets.main.output) {
+        include '**'
+    }
+    extension = 'jar'
+    classifier = 'deobf'
+}
+
+artifacts {
+    archives devJar
+    archives apiJar
+}
+
+changelog {
+    title = "Project 42"
+    fileName = "CHANGELOG.md"
+    outputDirectory = file("$projectDir")
+    since = '0.0.0'
+    commitFormat = '%s (%an)'
+    markdown {
+        commitFormat = '* %s (%an)'
+    }
+    includeLines = {
+        !it.contains("Merge")
+    }
+    processLines = {
+        String input = it as String
+        if (input.contains('[ci skip] ')) {
+            input = input.minus('[ci skip] ')
+        }
+        input
+    }
+}
+
+tasks.curseforge.enabled =  project.hasProperty('curse_api')
+
+curseforge {
+    if (project.hasProperty('curse_api')) {
+        apiKey = project.curse_api
+    }
+    project {
+        id = '306512'
+        changelog = file('CHANGELOG.md')
+        changelogType = 'markdown'
+        releaseType = 'beta'
+
+        addArtifact sourceJar
+        addArtifact apiJar
+        addArtifact devJar
+    }
+}
+
+license {
+    header rootProject.file('HEADER')
+    include "**/*.java"
+    ext.year = Calendar.getInstance().get(Calendar.YEAR)
+    ext.name = 'Buuz135'
+    ignoreFailures = true
+    mapping {
+        java='SLASHSTAR_STYLE'
     }
 }
